# airflow_jaffleshop

./: .env.example  .gitignore  README.md  pyproject.toml
dags/: jaffle_shop_dag.py  jaffleshop_dag.py
scripts/: init_airflow.sh  start_airflow.sh
