[project]
name = "jaffle-shop-airflow"
version = "0.1.0"
description = "Jaffle Shop dbt pipelines with Apache Airflow"
requires-python = ">=3.12"

dependencies = [
    "apache-airflow==2.8.1",
    "astronomer-cosmos[dbt-snowflake]>=1.4.0",
    "dbt-snowflake>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
